<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.computerquiz.MainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="14dp"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_these_questions"
        android:gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/which_of_the_following_is_a_presentation_program"
        android:layout_marginBottom="8dp"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="8dp">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ms_word"
             />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ms_excel"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ms_outlook"
     />
        <RadioButton
            android:id="@+id/first_right_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ms_power_point"
            android:onClick="RadioButtonClicked1"
      />
    </RadioGroup>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">


    <TextView
        android:id="@+id/speedometr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speedometr_is_an_example_of_computers"
        />

    <EditText
        android:layout_toEndOf="@id/speedometr"
        android:layout_toRightOf="@id/speedometr"
        android:id="@+id/edit_text"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_toEndOf="@id/edit_text"
        android:layout_toRightOf="@id/edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comp"
        />
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/which_of_the_following_is_a_storage_device"
        />
    <CheckBox
        android:id="@+id/answer2-1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hard_disk" />
    <CheckBox
        android:id="@+id/answer2-2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usb_disk" />
    <CheckBox
        android:id="@+id/answer2-3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ssd_disk"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4_collection_of_1024_bytes"
        android:layout_marginBottom="8dp"
        />
    <Spinner
        android:id="@+id/sort_by_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/listOfCollections"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lastOne"
        android:layout_marginBottom="8dp"
        />
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/second_right_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upl"
            android:onClick="RadioButtonClicked2"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/downloading"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/allOfTheAbove"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nothing_of_the_above"
            android:layout_marginBottom="8dp"
            />
    </RadioGroup>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:onClick="DisplayResults"
            />

</LinearLayout>

</ScrollView>
